code/Lifetime/output/life_1_2.txt
error[E0716]: temporary value dropped while borrowed
 --> life_1_2.rs:4:18
  |
4 |         let y = &Box::new(13);
  |                  ^^^^^^^^^^^^ creates a temporary which is freed while still in use
5 |         x = y;
6 |     }
  |     - temporary value is freed at the end of this statement
7 |     println!("{}", x);
  |                    - borrow later used here
  |
  = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
